--- a/.env-demo
+++ b/.env-demo
@@ -4,8 +4,9 @@ SHARED_SECRET=el@sadsadyS58
 DATABASE_NAME=pyddns
 DATABASE_USER=pyddns
 DATABASE_PASS=PyDyn@m1cDNSP0s
-DATABASE_HOST=postgres
-DATABASE_PORT=5432
+DATABASE_ROOT_PASS=root@m1cDNSP0s
+DATABASE_HOST=mariadb
+DATABASE_PORT=3306
 
 DJANGO_SU_NAME=admin
 DJANGO_SU_EMAIL=admin@company.com
@@ -16,6 +17,8 @@ DJANGO_LOG_LEVEL=INFO
 DJANGO_PYTHONUNBUFFERED=1
 OWN_ADMIN=1
 DNS_ALLOW_AGENT=ddclient3,ddclient,DynDNS
+
+MAX_DOMAINS_USER=2
 
 HTTP_PORT=80
 HTTPS_PORT=443
