--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   ddns:
     image: davd/docker-ddns:1.2.1
-    restart: always
+    restart: unless-stopped
     environment:
       RECORD_TTL: 60
       ZONE: '${DOMAIN}'
@@ -17,7 +17,7 @@ services:
   python:
     image: pyddns:3.1.1
     build: ./docker
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./appdata/pyddns:/usr/src/app
       - ./appdata/static/node_modules:/usr/src/app/static/node_modules
@@ -27,7 +27,8 @@ services:
       DNS_DOMAIN: '${DOMAIN}'
       DNS_SHARED_SECRET: '${SHARED_SECRET}'
       DNS_ALLOW_AGENT: '${DNS_ALLOW_AGENT}'
-      DB_HOST: postgres
+      DB_HOST: '${DATABASE_HOST}'
+      DB_PORT: '${DATABASE_PORT}'
       DB_NAME: '${DATABASE_NAME}'
       DB_USER: '${DATABASE_USER}'
       DB_PASSWORD: '${DATABASE_PASS}'
@@ -38,19 +39,20 @@ services:
       OWN_ADMIN: '${OWN_ADMIN}'
       MAX_DOMAINS_USER: '${MAX_DOMAINS_USER}'
     depends_on:
-      - "postgres"
+      - "mariadb"
     networks:
       red:
 
-  postgres:
-    image: postgres:9.6
-    restart: always
+  mariadb:
+    image: mariadb:10.2
+    restart: unless-stopped
     environment:
-      POSTGRES_PASSWORD: ${DATABASE_PASS}
-      POSTGRES_USER: '${DATABASE_NAME}'
-      POSTGRES_DB: '${DATABASE_USER}'
+      MYSQL_ROOT_PASSWORD: '${DATABASE_ROOT_PASS}'
+      MYSQL_PASSWORD: '${DATABASE_PASS}'
+      MYSQL_DATABASE: '${DATABASE_NAME}'
+      MYSQL_USER: '${DATABASE_USER}'
     volumes:
-     - ./data/dbdata:/var/lib/postgresql/data
+     - ./data/dbdata:/var/lib/mysql
     networks:
       red:
 
@@ -64,6 +66,7 @@ services:
       - ./config/nginx:/etc/nginx/conf.d
       - ./appdata/static:/static
       - ./data/certs:/etc/nginx/certs
+      - /var/log/nginx:/var/log/nginx
     depends_on:
       - "python"
     networks:
