--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,10 @@ services:
       DNS_DOMAIN: '${DOMAIN}'
       DNS_SHARED_SECRET: '${SHARED_SECRET}'
       DNS_ALLOW_AGENT: '${DNS_ALLOW_AGENT}'
+      LDAP_URI: '${LDAP_URI}'
+      LDAP_BIND_DN: '${LDAP_BIND_DN}'
+      LDAP_BIND_PASSWD: '${LDAP_BIND_PASSWD}'
+      LDAP_BASE_DN: '${LDAP_BASE_DN}'
       DB_HOST: '${DATABASE_HOST}'
       DB_PORT: '${DATABASE_PORT}'
       DB_NAME: '${DATABASE_NAME}'
