--- a/.env-demo
+++ b/.env-demo
@@ -23,3 +23,8 @@ MAX_DOMAINS_USER=2
 HTTP_PORT=80
 HTTPS_PORT=443
 DNS_PORT=53
+
+LDAP_URI=LDAP_URI
+LDAP_BIND_DN=LDAP_BIND_DN
+LDAP_BIND_PASSWD=LDAP_BIND_PASSWD
+LDAP_BASE_DN=LDAP_BASE_DN
